Fiz o CSS responsivo

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@100;300;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="src/CSS/reset.css">
-    <link rel="stylesheet" href="src/CSS/styles.css">
-    <link rel="stylesheet" href="src/CSS/types.css">
+    <link rel="stylesheet" href="./src/CSS/reset.css">
+    <link rel="stylesheet" href="./src/CSS/styles.css">
+    <link rel="stylesheet" href="./src/CSS/types.css">
+    <link rel="stylesheet" href="./src/CSS/responsive.css">
 
 <!--font-family: "Kanit", sans-serif;-->
 
